resized the logo bar, fixed wrapping issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -307,22 +307,40 @@ input[name='q']::placeholder {
         height: calc(100vh - 116px);
     }
 
-    .this-size {
-        font-size: 2.5rem;
-    }
-}
-
-/* Main screen text on small screens */
-@media (max-width: 370px) {
-    .this-size {
-        font-size: 1.5rem;
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
     }
 
-    .small-size {
-        font-size: 2em;
+    .nav-link {
+        padding: 0.15rem;
     }
 
-    .mobile-margin {
-        margin-top: 5px;
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-black.rounded-0,
+    .btn.btn-black.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-black.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty,
+    .decrement-qty {
+        padding: .25rem .5rem !important;
     }
 }
